# Changelog

## Version 4.0.2

* Fixing #135 color information wasn't passed through correctly
* Fixing #143 by adding legacy windows builds with Python 3.8 for time being
* Fixing queue breaks if there is an error during conversion
* Fixing Remove HDR doesn't stay selected when returning item from queue
* Fixing resolution doesn't stay after returning from queue

## Version 4.0.1

* Fixing #141 FastFlix v4.0.0 Windows Installer - Unable to launch (thanks to pcf1)

## Version 4.0.0

* Adding #59 Queue system
* Adding #94 profiles (thanks to robchap79)
* Adding #98 multi-lingual support (thanks to leonardyan)
* Adding #111 HDR10+ Optimization flag for x265 (thanks to SlashX)
* Adding #113 copy video track option (thanks to leonardyan)
* Adding |=====  | Progress Bars
* Adding support for interlaced videos
* Adding option to download newest FFmpeg on Windows
* Adding builds for MacOS and Linux
* Adding --test (imports only) and --version startup options
* Adding option to clean old (over two weeks) logs by compressing them
* Adding background fix for first subtitle track to not be default if mkvpropedit is detected (thanks to ftpmorph)
* Changing to a model based dataclass setup with a large internal re-write
* Changing so it opens the file dialog for new video to last used directory
* Changing log names, including file output stem in conversion log
* Fixing #116 how HDR10 options for x265 work (thanks to HannesJo0139)
* Fixing dispositions being set for wrong tracks (thanks to ftpmorph)
* Fixing thumbnails not being generated properly on 10-bit non bt2020 files
* Fixing QThread destroyed message on close
* Fixing Cannot queue arguments of type 'QTextCursor' warning messages

## Version  3.4.3

* Fixing #110 (multi) no warning for those updating about automatic burn-in subtitles (thanks to loungebob)
* Fixing #110 (multi) no option to disable automatic subtitle burn-in behavior  (thanks to loungebob)