@@ -1,4 +1,4 @@
-name: Build executables for Windows
+name: Build executables for Windows 7 (legacy)
 on:
   push:
     branches: [ master, develop, build ]
